Adding a new form

--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -14,7 +14,7 @@
 {% for idea in space.ideas %}
 <li class="first-idea">
   <div class="idea">
-    <img class="eb-image" src="{{idea.images.first.url}}" />
+    <img class="eb-image" src="{{idea.images.first.large}}" />
     
     <div class="idea-ui">
       <div class="idea-ui-container">
