JS sourcing error, maybe a paser. Fancybox image update

--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -33,7 +33,7 @@
           <li class="icon-like"><a href="#">Like</a></li>
           <li class="icon-comment"><a href="#">Comment</a></li>
           <li class="icon-locate"><a href="#">Locate</a></li>
-          <li class="icon-view last"><a class="fancyb" href="{{idea.images.image.massive}}" title="Taken by Benjamin Reid">View</a></li>
+          <li class="icon-view last"><a class="fancyb" href="{{idea.images.first.large}}" title="Taken by Benjamin Reid">View</a></li>
         </ul>
       </div><!-- /.idea-ui-container -->  
     </div><!-- /.idea-ui -->
