--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -97,7 +97,7 @@
   <script type="text/javascript">var switchTo5x=true;</script><script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'905146cb-1a71-4122-a2cd-e4a1c5d56f19'});</script>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="{{asset_url}}/js/jquery-1.6.2.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="http://dev.nouveller.com/rusic/js/jquery-1.6.2.min.js"><\/script>')</script>
   <script src="{{asset_url}}/js/fancybox/jquery.fancybox.pack.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9Xave6hpAmTKT4LT3L2vmkSq-roi0bxc&sensor=false"></script>
 
