Add in forloop index

--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -45,7 +45,7 @@
 
         <div class="idea-map">
           <div class="map-holder">
-            <div class="gmap" id="map0"></div>
+            <div class="gmap" id="map{{forloop.index}}"></div>
           </div><!-- /.map-holder -->   
         </div><!-- /.idea-comments -->
         
