Move the nav inside the wrapper, and print out the space summary

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -57,42 +57,43 @@
   {% endif %}
   
   <div class="wrapper">
-  <h1><a href="{{space.permalink}}" title="link to Social Space">{{space.title}}</a></h1>
+    <h1><a href="{{space.permalink}}" title="link to Social Space">{{space.title}}</a></h1>
 
-  <p class="strapline">"Humanizing the world, one googly eye at a time..."</p>
+    <p class="strapline">"{{space.summary}}"</p>
 
-  <div class="header-extra">
-    {% if space.expires_at %}
-      <div id="timer">
-        <time id="expires-at" datetime="{{space.expires_at}}">{{space.expires_at}}</time>
-        <span class="countdown-text">Left to submit your photos</span>
+    <div class="header-extra">
+      {% if space.expires_at %}
+        <div id="timer">
+          <time id="expires-at" datetime="{{space.expires_at}}">{{space.expires_at}}</time>
+          <span class="countdown-text">Left to submit your photos</span>
+        </div>
+      {% endif %}      
+
+      <!-- Share buttons-->
+      <div id="share-space">
+        <div class="share-buttons">
+        <span class='st_twitter_hcount' displayText='Tweet'></span>
+        <span class='st_facebook_hcount' displayText='Facebook'></span>
+        <span class='st_plusone_hcount' ></span>
+        </div>
       </div>
-    {% endif %}      
+    </div><!-- /.header-extra -->
 
-    <!-- Share buttons-->
-    <div id="share-space">
-      <div class="share-buttons">
-      <span class='st_twitter_hcount' displayText='Tweet'></span>
-      <span class='st_facebook_hcount' displayText='Facebook'></span>
-      <span class='st_plusone_hcount' ></span>
-      </div>
-    </div>
-  </div><!-- /.header-extra -->
+    {{ yield }}
 
-  {{ yield }}
-
-  <footer>
+    <footer>
       <p>A rusic theme to bomb the eyes out of you.</p>
     </footer>
+    
+    <div class="nav-item nav-left-cont">
+      <a href="#" id="nav-left" class="nav-inactive">Left</a>
+    </div><!-- /.nav-item -->
+
+    <div class="nav-item nav-right-cont">
+      <a href="#" id="nav-right">right</a>
+    </div><!-- /.nav-item -->
+
   </div><!-- /.wrapper -->
-
-  <div class="nav-item nav-left-cont">
-    <a href="#" id="nav-left" class="nav-inactive">Left</a>
-  </div><!-- /.nav-item -->
-
-  <div class="nav-item nav-right-cont">
-    <a href="#" id="nav-right">right</a>
-  </div><!-- /.nav-item -->
 
   <script type="text/javascript">var switchTo5x=true;</script><script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'905146cb-1a71-4122-a2cd-e4a1c5d56f19'});</script>
 
